@@ -45,20 +45,22 @@ files. It is Free Software (&lsquo;open source&rsquo;).
     <a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">info</a>,
     search
     <a href="http://mail.gnu.org/archive/html/lilypond-user/">archive</a>)
-    <br><strong>important notice:</strong>
+    <br>
+<!--    <strong>important notice:</strong>
     <a href="http://mail.gnu.org/archive/html/bug-lilypond/2004-03/msg00048.html">
       only <strong>text/plain</strong> messages are allowed</a>.
-
+!-->
   <li>Send bug reports to
     <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
     (mailing list
     <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
     search
     <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>)
-    <br><strong>important notice:</strong>
+    <br>
+    <!-- <strong>important notice:</strong>
     <a href="http://mail.gnu.org/archive/html/lilypond-user/2004-03/msg00111.html">
       only <strong>text/plain</strong> messages are allowed</a>.
-
+!-->
   <li>Contact the developers by subscribing to
     <tt><a href="mailto:lilypond-devel@gnu.org">lilypond-devel@gnu.org</a></tt>
     (mailing list 
