@@ -1,3 +1,7 @@
+2004-09-23  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site/about/index.html: Comment-out text/plain notice.
+
 2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
 	* site/about/faq.html (Han-Wen): update answers regarding latex.
